# aiko

./: .gitignore  CMakeLists.txt  README.md
config/: compiler.cmake  config.cmake  in.cmake
include/aiko/: types.h
include/aiko/job/: job_s.h
include/aiko/sys/: job.h  mem.h
include/config.in/: stm32f10x_conf.h.in
include/firmware/: misc.h  stm32f10x.h  stm32f10x_adc.h  stm32f10x_bkp.h  stm32f10x_can.h  stm32f10x_cec.h  stm32f10x_conf.h.in  stm32f10x_crc.h  stm32f10x_dac.h  stm32f10x_dbgmcu.h  stm32f10x_dma.h  stm32f10x_exti.h  stm32f10x_flash.h  stm32f10x_fsmc.h  stm32f10x_gpio.h  stm32f10x_i2c.h  stm32f10x_iwdg.h  stm32f10x_pwr.h  stm32f10x_rcc.h  stm32f10x_rtc.h  stm32f10x_sdio.h  stm32f10x_spi.h  stm32f10x_tim.h  stm32f10x_usart.h  stm32f10x_wwdg.h
include/job/: job_t.h
link/: aiko.ld
source/firmware/: core_cm3.c  misc.c  stm32f10x_adc.c  stm32f10x_bkp.c  stm32f10x_can.c  stm32f10x_cec.c  stm32f10x_crc.c  stm32f10x_dac.c  stm32f10x_dbgmcu.c  stm32f10x_dma.c  stm32f10x_exti.c  stm32f10x_flash.c  stm32f10x_fsmc.c  stm32f10x_gpio.c  stm32f10x_i2c.c  stm32f10x_iwdg.c  stm32f10x_pwr.c  stm32f10x_rcc.c  stm32f10x_rtc.c  stm32f10x_sdio.c  stm32f10x_spi.c  stm32f10x_tim.c  stm32f10x_usart.c  stm32f10x_wwdg.c  system_stm32f10x.c
source/initialzation/: initialization.c  initialzation.c
source/job/: job_s.c
source/startup/: boot.s
source/sys/: job.c  mem.c
